Fix global overflow issues and update loader

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,11 +49,11 @@
 
 @layer base {
   html {
-    /* @apply overflow-x-hidden; */
+    @apply overflow-x-hidden;
   }
 
   body {
-    @apply bg-background text-foreground antialiased;
+    @apply bg-background text-foreground antialiased relative overflow-x-hidden;
     font-feature-settings: "rlig" 1, "calt" 1;
   }
 }
